tests/fixtures/invalid/restrict_scalar_parameter.c
int take(restrict int value) {
    return value;
}

int main(void) {
    return take(1);
}
